ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/pacemaker_iot_data__dlm.object-meta.xml
<CustomObject>
    <label>pacemaker_iot_data</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>pacemaker_iot_data</labelOverride>
        <masterLabel>pacemaker_iot_data</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataModelAttributes>
</CustomObject>