ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/AF_Burden__c.field-meta.xml
<CustomField>
    <fullName>AF_Burden__c</fullName>
    <label>AF Burden (%)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AF Burden (%)</labelOverride>
        <masterLabel>AF Burden (%)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>