ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Alert_Code__c.field-meta.xml
<CustomField>
    <fullName>Alert_Code__c</fullName>
    <label>Alert Code</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Alert Code</labelOverride>
        <masterLabel>Alert Code</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>