ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Alert_Description__c.field-meta.xml
<CustomField>
    <fullName>Alert_Description__c</fullName>
    <label>Alert Description</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Alert Description</labelOverride>
        <masterLabel>Alert Description</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>