ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Alert_Severity__c.field-meta.xml
<CustomField>
    <fullName>Alert_Severity__c</fullName>
    <label>Alert Severity</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Alert Severity</labelOverride>
        <masterLabel>Alert Severity</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>