ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Alert_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Alert_Timestamp__c</fullName>
    <label>Alert Timestamp</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Alert Timestamp</labelOverride>
        <masterLabel>Alert Timestamp</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>