ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Atrial_Capture_Status__c.field-meta.xml
<CustomField>
    <fullName>Atrial_Capture_Status__c</fullName>
    <label>Atrial Capture Status</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Atrial Capture Status</labelOverride>
        <masterLabel>Atrial Capture Status</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>