ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Atrial_Lead_Impedance_Ohms__c.field-meta.xml
<CustomField>
    <fullName>Atrial_Lead_Impedance_Ohms__c</fullName>
    <label>Atrial Lead Impedance (Ohms)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Atrial Lead Impedance (Ohms)</labelOverride>
        <masterLabel>Atrial Lead Impedance (Ohms)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>