ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Atrial_Pacing_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Atrial_Pacing_Percentage__c</fullName>
    <label>Atrial Pacing Percentage</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Atrial Pacing Percentage</labelOverride>
        <masterLabel>Atrial Pacing Percentage</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>