ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Atrial_Sensing_Amplitude_mV__c.field-meta.xml
<CustomField>
    <fullName>Atrial_Sensing_Amplitude_mV__c</fullName>
    <label>Atrial Sensing Amplitude (mV)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Atrial Sensing Amplitude (mV)</labelOverride>
        <masterLabel>Atrial Sensing Amplitude (mV)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>