ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/AV_Delay_ms__c.field-meta.xml
<CustomField>
    <fullName>AV_Delay_ms__c</fullName>
    <label>AV Delay (ms)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AV Delay (ms)</labelOverride>
        <masterLabel>AV Delay (ms)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>