ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Battery_Status__c.field-meta.xml
<CustomField>
    <fullName>Battery_Status__c</fullName>
    <label>Battery Status</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Battery Status</labelOverride>
        <masterLabel>Battery Status</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>