ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Battery_Voltage__c.field-meta.xml
<CustomField>
    <fullName>Battery_Voltage__c</fullName>
    <label>Battery Voltage</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Battery Voltage</labelOverride>
        <masterLabel>Battery Voltage</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>