ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pacemaker IOT</relationshipLabel>
    <relationshipName>pacemaker_iot_data</relationshipName>
    <type>Lookup</type>
</CustomField>