ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Episode_Duration_s__c.field-meta.xml
<CustomField>
    <fullName>Episode_Duration_s__c</fullName>
    <label>Episode Duration (s)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Episode Duration (s)</labelOverride>
        <masterLabel>Episode Duration (s)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>