ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Episode_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Episode_Timestamp__c</fullName>
    <label>Episode Timestamp</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Episode Timestamp</labelOverride>
        <masterLabel>Episode Timestamp</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>