ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Episode_Type__c.field-meta.xml
<CustomField>
    <fullName>Episode_Type__c</fullName>
    <label>Episode Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Episode Type</labelOverride>
        <masterLabel>Episode Type</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>