ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Estimated_Longevity_Years__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Longevity_Years__c</fullName>
    <label>Estimated Longevity Years</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Estimated Longevity Years</labelOverride>
        <masterLabel>Estimated Longevity Years</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>