ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Implant_Date__c.field-meta.xml
<CustomField>
    <fullName>Implant_Date__c</fullName>
    <label>Implant Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Implant Date</labelOverride>
        <masterLabel>Implant Date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>