ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Intrinsic_Rate_bpm__c.field-meta.xml
<CustomField>
    <fullName>Intrinsic_Rate_bpm__c</fullName>
    <label>Intrinsic Rate (bpm)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Intrinsic Rate (bpm)</labelOverride>
        <masterLabel>Intrinsic Rate (bpm)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>