ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Lower_Rate_Limit_bpm__c.field-meta.xml
<CustomField>
    <fullName>Lower_Rate_Limit_bpm__c</fullName>
    <label>Lower Rate Limit (bpm)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Lower Rate Limit (bpm)</labelOverride>
        <masterLabel>Lower Rate Limit (bpm)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>