ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Observation_Id__c.field-meta.xml
<CustomField>
    <fullName>Observation_Id__c</fullName>
    <label>Observation Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Observation Id</labelOverride>
        <masterLabel>Observation Id</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>