ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Observation_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Observation_Timestamp__c</fullName>
    <label>Observation Timestamp</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Observation Timestamp</labelOverride>
        <masterLabel>Observation Timestamp</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>