ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Pacing_Mode__c.field-meta.xml
<CustomField>
    <fullName>Pacing_Mode__c</fullName>
    <label>Pacing Mode</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Pacing Mode</labelOverride>
        <masterLabel>Pacing Mode</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>