ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Party_Identification_Type__c.field-meta.xml
<CustomField>
    <fullName>Party_Identification_Type__c</fullName>
    <label>Party Identification Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Party Identification Type</labelOverride>
        <masterLabel>Party Identification Type</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>