ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/rel_1773163048264_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1773163048264_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>pacemaker_iot_data_Serial_Number_map_rel</label>
    <referenceTo>ssot__Asset__dlm</referenceTo>
    <relationshipLabel>pacemaker_iot_data_Serial_Number_map_rel</relationshipLabel>
    <relationshipName>rel_1773163048264_end</relationshipName>
    <type>Lookup</type>
</CustomField>