ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/rel_1773213098382_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1773213098382_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>pacemaker_iot_data_Observation_Id_ma_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>pacemaker_iot_data_Observation_Id_ma_rel</relationshipLabel>
    <relationshipName>rel_1773213098382_end</relationshipName>
    <type>Lookup</type>
</CustomField>