ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Signal_Strength__c.field-meta.xml
<CustomField>
    <fullName>Signal_Strength__c</fullName>
    <label>Signal Strength</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Signal Strength</labelOverride>
        <masterLabel>Signal Strength</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>