ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Transmission_Status__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Status__c</fullName>
    <label>Transmission Status</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Transmission Status</labelOverride>
        <masterLabel>Transmission Status</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>