ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Transmission_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Timestamp__c</fullName>
    <label>Transmission Timestamp</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Transmission Timestamp</labelOverride>
        <masterLabel>Transmission Timestamp</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>