ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Ventricular_Capture_Status__c.field-meta.xml
<CustomField>
    <fullName>Ventricular_Capture_Status__c</fullName>
    <label>Ventricular Capture Status</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Ventricular Capture Status</labelOverride>
        <masterLabel>Ventricular Capture Status</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>