ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Ventricular_Pacing_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Ventricular_Pacing_Percentage__c</fullName>
    <label>Ventricular Pacing Percentage</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Ventricular Pacing Percentage</labelOverride>
        <masterLabel>Ventricular Pacing Percentage</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>