ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Ventricular_Pacing_Threshold_V__c.field-meta.xml
<CustomField>
    <fullName>Ventricular_Pacing_Threshold_V__c</fullName>
    <label>Ventricular Pacing Threshold (V)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Ventricular Pacing Threshold (V)</labelOverride>
        <masterLabel>Ventricular Pacing Threshold (V)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>