ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/Ventricular_Sensing_Amplitude_mV__c.field-meta.xml
<CustomField>
    <fullName>Ventricular_Sensing_Amplitude_mV__c</fullName>
    <label>Ventricular Sensing Amplitude (mV)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Ventricular Sensing Amplitude (mV)</labelOverride>
        <masterLabel>Ventricular Sensing Amplitude (mV)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>