ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/VF_Episodes__c.field-meta.xml
<CustomField>
    <fullName>VF_Episodes__c</fullName>
    <label>VF Episodes</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>VF Episodes</labelOverride>
        <masterLabel>VF Episodes</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>