ps-datacloud/main/default/objects/pacemaker_iot_data__dlm/fields/VT_Episodes__c.field-meta.xml
<CustomField>
    <fullName>VT_Episodes__c</fullName>
    <label>VT Episodes</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>VT Episodes</labelOverride>
        <masterLabel>VT Episodes</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>